--- a/css/student1.css
+++ b/css/student1.css
@@ -40,3 +40,21 @@ body{
     margin-bottom: 10px;
     text-align: center;
  }
+
+ div.gallery{
+    display: grid;
+    grid-template-columns: 250px 250px;
+    border: 5px solid black;
+    width: 90%;
+    justify-content: center;
+    align-items: stretch;
+    justify-items: center;
+ }
+
+ .gallery img{ 
+    width: 80%;
+ }
+
+ .gallery img:last-child{
+    grid-column: 1/3;
+ }
